# guard-glp

./: .env.example  .gitignore  .pre-commit-config.yaml  GUIDE.md  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: code-checks.yaml  pytest.yaml
configs/: eval_all_adversarial.yaml  eval_all_logp.yaml
configs/dataset/: build_fineweb_llama1b_layer07.yaml  build_guardglpbenign_llama1b_alltok_layer14_full.yaml  build_guardglpbenign_llama1b_alltok_layer14_useronly.yaml  build_guardglpbenign_llama1b_last_full.yaml  build_guardglpbenign_llama1b_last_useronly.yaml  build_guardglpbenign_llama1b_layer07.yaml  build_smoke_gsm8k_llama1b.yaml  build_smoke_gsm8k_llama1b_baukit.yaml  build_wildchat_llama1b_layer07.yaml  build_wildchat_llama8b_layer24.yaml
configs/detection/: eval_pi.yaml
configs/eval/: fd_llama1b_guardglpbenign_alltok_layer14.yaml
configs/paper/: eval_diffmean.yaml  eval_dte.yaml  eval_dte_glp.yaml  eval_lp.yaml  eval_plotting.yaml  eval_reconstruction_err.yaml
configs/paper/steering/: classic.yaml  compliance_direct.yaml  compliance_glp.yaml  compliance_noglp.yaml  glp.yaml  nosteering_glp.yaml  nosteering_noglp.yaml  random.yaml  refusal_glp.yaml  refusal_noglp.yaml
configs/paper/steering/_old/: classic.yaml  glp.yaml
configs/train/: glp_llama1b_guardglpbenign.yaml  glp_llama1b_guardglpbenign_alltok_layer14.yaml
docs/: dataset-manager-plan.md
glp/: denoiser.py  flow_matching.py  script_steer.py  utils_acts.py
notebooks/: exploratory_analysis.ipynb
scripts/: README.md  eval_diffmean.py  eval_diffmean.sh  eval_linear_probe.sh  eval_ood.sh  evaluate_all.sh  evaluate_classifier.sh  evaluate_diffmean.py  evaluate_diffmean.sh  evaluate_linear_probe.py  evaluate_linear_probe.sh  judge_responses.py  node1.sh  node2.sh  ood_evaluate_classifier.py  rejudge.sh  rejudge_all.sh  run_rejudge.sh  serve_llm.sh  steering.py  steering.sh  steering_refusal.sh  visualize_activations.py  visualize_activations.sh
scripts/dataset/: _finalize.sbatch  _run_shard.sbatch  build_activations.py  build_activations.sh  count_tokens.py  run_guardglpbenign_campaign.sh
scripts/detection/: eval_all.sh  eval_classifier.sh  eval_diffmean.py  eval_diffmean.sh  eval_linear_probe.py  eval_linear_probe.sh  eval_ood.sh  evaluate_classifier.py  ood_eval_linear_probe.py  ood_evaluate_classifier.py
scripts/eval/: eval_fd.py
scripts/inference/: judge_responses.py  rejudge.sh  rejudge_all.sh  rejudge_responses.py
scripts/preprocessing/: merge_train_sets.py  merge_train_sets.sh
scripts/steering/: run_steering_benign.sh  run_steering_refusal.sh  steering.py  steering.sh  steering_refusal.py  steering_refusal.sh
scripts/train/: _train.sbatch  run_layer14_alltok.sh  train_glp.py  train_glp_all.sh
scripts/visualization/: visualize_activations.py  visualize_activations.sh
src/: preprocessing.py
src/glp/: __init__.py  denoiser.py  flow_matching.py  script_eval.py  script_probe.py  script_steer.py  utils_acts.py
src/glp/dataset/: __init__.py  act_dataset.py  backends.py  builder.py  loader.py  manifest.py  stats.py
src/glp/eval/: __init__.py  fd.py
src/glp/train/: __init__.py  schedulers.py  trainer.py
tests/: test_dataset.py  test_denoiser.py  test_fd.py  test_flow_matching.py  test_imports.py  test_loader.py  test_preprocessing.py  test_script_eval.py  test_train.py
