[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "glp"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "baukit @ git+https://github.com/davidbau/baukit@9d51abd51ebf29769aecc38c4cbef459b731a36e",
    "datasets",
    "diffusers",
    "einops",
    "fire",
    "huggingface-hub",
    "matplotlib",
    "numpy",
    "omegaconf",
    "openai",
    "pandas",
    "pillow",
    "pyyaml",
    "safetensors",
    "scikit-learn",
    "scipy",
    "torch",
    "tqdm",
    "transformers",
]

[tool.setuptools]
packages = ["glp"]
