[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "guard-glp"
version = "0.1.0"
keywords = ["llm", "adversarial-detection", "anomaly-detection", "diffusion", "activations"]
maintainers = [
  { name="Diego Calanzone" },
  { name="Pietro Greiner" },
]
authors = [
  { name="Diego Calanzone" },
  { name="Pietro Greiner" },
]
description = "Generative Meta-Models as Adversarial Classifiers: adversarial prompt detection via the geometry of LLM activations using Generative Latent Priors (GLP)."
readme = { file = "README.md", content-type = "text/markdown"}

requires-python = ">=3.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
# Added with `uv add package_name`
dependencies = [
    "baukit @ git+https://github.com/davidbau/baukit@9d51abd51ebf29769aecc38c4cbef459b731a36e",
    "datasets",
    "diffusers",
    "einops",
    "fire",
    "huggingface-hub",
    "joblib",
    "matplotlib",
    "numpy",
    "omegaconf",
    "openai",
    "pandas",
    "pillow",
    "pyyaml",
    "safetensors",
    "scikit-learn",
    "scipy",
    "torch",
    "tqdm",
    "transformers",
]

# Heavy, cluster-only inference stack. These have no macOS wheels and must be
# installed in a specific order (see README "Setup"); kept out of the default
# `uv sync` so the core package and dev tooling install everywhere.
[project.optional-dependencies]
serve = [
    "vllm==0.9.2",
    "nnsight==0.5.0",
]

# Added with `uv add --group dev package_name`
[dependency-groups]
dev = [
    "pandas-stubs",
    "pre-commit>=4.3.0",
    "pyright>=1.1.405",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.12.12",
    "scipy-stubs",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
glp = ["py.typed"]

[tool.pyright]
include = ["src", "scripts", "tests"]
typeCheckingMode = "strict"
reportUnusedVariable = "error"
reportMissingImports = "error"
reportMissingParameterType = "error"
reportMissingTypeArgument = "error"
reportUntypedFunctionDecorator = "error"
extraPaths = ["stubs"]
exclude = []
# Several runtime deps publish NO type information and have NO stub package on
# PyPI (fire, datasets, scikit-learn, baukit, joblib). Their import lines and the
# values they return cannot be typed from our code. We install scipy-stubs and
# pandas-stubs (published packages) for those two, and disable the remaining
# stub-gap reports below. Everything else stays strict and is fixed with real
# type hints — no inline ignores, no hand-written stubs.
reportMissingTypeStubs = "none"
reportUnknownVariableType = "none"
reportUnknownMemberType = "none"
reportUnknownArgumentType = "none"
reportUnknownParameterType = "none"
reportUnknownLambdaType = "none"

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = []

[tool.ruff.lint]
select = [
  "E", "F", "UP", "I", "B", "N", "S", "A", "C4", "T20"
]
# E501: line length handled by the formatter.
# D107: missing docstring in __init__.
# N803/N806: single-capital / CamelCase names (X, Y, Z, W, X_train, ...) are
#   standard mathematical notation in this scientific/ML codebase.
ignore = ["E501", "D107", "N803", "N806"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"src/**/__init__.py" = ["D104", "D107"]  # ignore module and __init__ docstrings
"tests/**" = ["S101"]  # allow asserts in tests
# scripts/ holds experimental research entry points run via SLURM/CLI:
#   T201  print() is the intended user-facing stdout output
#   S101  assert-based shape/precondition checks are idiomatic here
#   S105/S106/S107  false positives on kwargs like `token=`, `checkpoint=`
#   S602  subprocess(shell=True) is used only for fixed HF-download commands
#   A002  argument names shadowing builtins (e.g. `input`) mirror upstream APIs
"scripts/**" = ["T201", "S101", "S105", "S106", "S107", "S602", "A002"]
# False positives: bandit's secret-detector trips on the word "token"/"checkpoint"
# in the identifiers `token_idx` / `token_pooling` (these hold "last"/"mean"/"all").
"src/glp/utils_acts.py" = ["S105", "S107"]
# Fixed dataset-provisioning shell script (conditional + wget/unzip); no untrusted input.
"src/glp/script_probe.py" = ["S602"]
# Fixed `huggingface-cli` dataset download via shell-free argv (PATH-resolved console script).
"src/glp/script_eval.py" = ["S603", "S607"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
  "--cov=glp",
  "--cov-report=term-missing",
  "--cov-report=xml",
  "-v"
]

[tool.coverage.run]
source = ["src"]
omit = []

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise AssertionError",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
